# wagtail-embedvideos

./: .gitignore  AUTHORS  AUTHORS.rst  CHANGES.rst  LICENSE  LICENSE.txt  MANIFEST.in  PKG-INFO  PYPIREADME.rst  README.md  README.rst  requirements-testing.txt  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
wagtail_embed_videos/: __init__.py  admin.py  admin_urls.py  apps.py  blocks.py  edit_handlers.py  forms.py  jinja2tags.py  models.py  permissions.py  wagtail_hooks.py  widgets.py
wagtail_embed_videos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wagtail_embed_videos/api/: fields.py
wagtail_embed_videos/api/admin/: endpoints.py  serializers.py
wagtail_embed_videos/api/v2/: endpoints.py  serializers.py
wagtail_embed_videos/locale/en/LC_MESSAGES/: django.mo  django.po
wagtail_embed_videos/locale/es/LC_MESSAGES/: django.mo  django.po
wagtail_embed_videos/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
wagtail_embed_videos/locale/ru/LC_MESSAGES/: django.mo  django.po
wagtail_embed_videos/locale/tr/LC_MESSAGES/: django.mo  django.po
wagtail_embed_videos/migrations/: 0001_initial.py  0002_auto_20150720_1137.py  0002_auto_20170422_0357.py  0002_auto_20180612_1604.py  0002_auto_20180822_0945.py  0002_embedvideo_collection.py  0003_auto_20150817_1256.py  0003_embedvideo_collection.py  0004_auto_20160911_2111.py  0004_auto_20211103_0746.py  0005_auto_20211103_0802.py  0005_permissions_data.py  0006_auto_20211104_0557.py  0006_merge_20170227_0707.py  0007_auto_20211109_0511.py
wagtail_embed_videos/static/wagtail_embed_videos/css/: embed-video-chooser.css
wagtail_embed_videos/static/wagtail_embed_videos/js/: embed-video-chooser-modal.js  (+1 more)
wagtail_embed_videos/tests/: settings.py  test_model.py  urls.py
wagtail_embed_videos/views/: chooser.py  embed_videos.py  utils.py
wagtail_embed_videos/views/bulk_actions/: add_tags.py  add_to_collection.py  delete.py  embed_video_bulk_action.py
(+21 files in other folders)
