[metadata]
name = wagtail-embedvideos
version = 0.5.0
description = Embed Videos for Wagtail CMS
long_description = file: PYPIREADME.rst, CHANGES.rst
long_description_content_type = text/x-rst
author = InfoPortugal S.A.
author_email = suporte24@infoportugal.com
maintainer = Basil Shubin
maintainer_email = basil.shubin@gmail.com
url = https://github.com/bashu/wagtail-embedvideos
download_url = https://github.com/bashu/wagtail-embedvideos/zipball/master
license = BSD License
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Wagtail
    Framework :: Wagtail :: 2

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django-embed-video>1.0
    wagtail>1.14,<3.0

[options.packages.find]
exclude = example*

[options.extras_require]
develop =
    tox
    django
    mock-django
    mock
    pytest-django
    pytest
test =
    mock-django
    mock
    pytest-django
    pytest-cov
    pytest

[bdist_wheel]
# No longer universal (Python 3 only) but leaving this section in here will
# trigger zest to build a wheel.
universal = 0

[flake8]
# Some sane defaults for the code style checker flake8
# black compatibility
max-line-length = 88
# E203 and W503 have edge cases handled by black
extend-ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
